--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Display phase
         run: echo "Deploying "${{github.event.inputs.releasetype}}" $INPUT_RELEASETYPE to PyPI"
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
